# AOC-2025

./: .clang-format  CMakeLists.txt
include/: framework.hpp  stopwatch.hpp  watch.hpp
include/day1/: dial.h
include/day2/: invalid_finder.hpp  range.hpp
include/day3/: joltage_meter.hpp
include/day4/: room.hpp
include/day5/: interval.hpp
include/day6/: cephaloproblem.hpp  problem.hpp
include/day7/: tachyon_manifold.hpp
include/day8/: circuit.hpp  junction_box.hpp
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp
src/day1/: dial.cpp
src/day2/: invalid_finder.cpp
src/day3/: joltage_meter.cpp
src/day4/: room.cpp
src/day5/: interval.cpp
src/day7/: tachyon_manifold.cpp
src/day8/: circuit.cpp  junction_box.cpp
tests/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp
